--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "Servidor backend robusto-listo-implementar",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jean Erraez Jumbo",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "mongoose": "^5.4.15"
+    "jsonwebtoken": "^8.5.0",
+    "mongoose": "^5.4.15",
+    "mongoose-unique-validator": "^2.0.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
