--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "connect-multiparty": "^2.2.0",
     "express": "^4.16.4",
+    "express-fileupload": "^1.1.1-alpha.3",
     "jsonwebtoken": "^8.5.0",
     "mongoose": "^5.4.15",
     "mongoose-unique-validator": "^2.0.2"
